--- a/index.html
+++ b/index.html
@@ -9,52 +9,81 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-header">
-                <div class="header-content">
-                    <h1>图片标注工具</h1>
-                    <button id="clearButton" class="btn btn-clear">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M20 5H9l-7 7 7 7h11a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2Z" />
-                            <line x1="18" x2="12" y1="9" y2="15" />
-                            <line x1="12" x2="18" y1="9" y2="15" />
-                        </svg>
-                        清除标注
-                    </button>
-                </div>
+    <div class="background" style="background-image: url(img1.jpg);">
+        <div class="button1" style="top: 456px; height: 310px;">
+            <div class="button2" style="height: 30px; line-height: 32px;">
+                <form action="">
+                    <label for="a01"><input type="radio" name="b1" id="a01"> 是</label> &nbsp;
+                    <label for="a02"><input type="radio" name="b1" id="a02"> 否</label>&nbsp;
+                </form>
             </div>
-
-            <div id="imageContainer" class="image-container">
-                <img src="img1.jpg" alt="可点击的图片" />
+            <div class="button2" style="height: 30px; line-height: 32px;">
+                <form action="">
+                    <label for="a03"><input type="radio" name="b1" id="a03"> 是</label> &nbsp;
+                    <label for="a04"><input type="radio" name="b1" id="a04"> 否</label>&nbsp;
+                </form>
             </div>
-
-            <div class="info-section">
-                <div class="space-y-2">
-                    <p class="info-text">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <circle cx="12" cy="12" r="10" />
-                            <line x1="12" y1="16" x2="12" y2="12" />
-                            <line x1="12" y1="8" x2="12.01" y2="8" />
-                        </svg>
-                        点击图片任意位置来添加标注圆圈
-                    </p>
-                    <p class="info-text">
-                        已添加标注数量:
-                        <span class="count-badge">
-                            <span id="circleCount">0</span>/10
-                        </span>
-                        <span id="maxCirclesMessage" class="error-message hidden">
-                            已达到最大标注数量
-                        </span>
-                    </p>
-                </div>
+            <div class="button2" style="height: 30px; line-height: 32px;">
+                <form action="">
+                    <label for="a05"><input type="radio" name="b1" id="a05"> 是</label> &nbsp;
+                    <label for="a06"><input type="radio" name="b1" id="a06"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 30px; line-height: 32px;">
+                <form action="">
+                    <label for="a07"><input type="radio" name="b1" id="a07"> 是</label> &nbsp;
+                    <label for="a08"><input type="radio" name="b1" id="a08"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 30px; line-height: 32px;">
+                <form action="">
+                    <label for="a09"><input type="radio" name="b1" id="a09"> 是</label> &nbsp;
+                    <label for="a10"><input type="radio" name="b1" id="a10"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 30px; line-height: 32px;">
+                <form action="">
+                    <label for="a11"><input type="radio" name="b1" id="a11"> 是</label> &nbsp;
+                    <label for="a12"><input type="radio" name="b1" id="a12"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 26px; line-height: 28px;">
+                <form action="">
+                    <label for="a13"><input type="radio" name="b1" id="a13"> 是</label> &nbsp;
+                    <label for="a14"><input type="radio" name="b1" id="a14"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 26px; line-height: 28px;">
+                <form action="">
+                    <label for="a15"><input type="radio" name="b1" id="a15"> 是</label> &nbsp;
+                    <label for="a16"><input type="radio" name="b1" id="a16"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 26px; line-height: 28px;">
+                <form action="">
+                    <label for="a17"><input type="radio" name="b1" id="a17"> 是</label> &nbsp;
+                    <label for="a18"><input type="radio" name="b1" id="a18"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 26px; line-height: 28px;">
+                <form action="">
+                    <label for="a19"><input type="radio" name="b1" id="a19"> 是</label> &nbsp;
+                    <label for="a20"><input type="radio" name="b1" id="a20"> 否</label>&nbsp;
+                </form>
+            </div>
+            <div class="button2" style="height: 26px; line-height: 28px;">
+                <form action="">
+                    <label for="a21"><input type="radio" name="b1" id="a21"> 是</label> &nbsp;
+                    <label for="a22"><input type="radio" name="b1" id="a22"> 否</label>&nbsp;
+                </form>
             </div>
         </div>
-    </div>
 
+        <div id="imageContainer" class="image-container">
+            <img src="img2.jpg" alt="可点击的图片" />
+        </div>
+
+    </div>
     <script src="script.js"></script>
 </body>
 
